@@ -1,3 +1,9 @@
+2013-06-13  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* sieve-manage.el (sieve-manage-open-server): Don't quote lambda.
+	Use plist-get rather than CL's getf.
+	(sieve-manage-parse-capability): Avoid CL's remove-if.
+
 2013-06-13  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* shr.el (shr-expand-url): Expansion should chop off the bits after the
@@ -90,7 +96,7 @@
 	sieve-manage-quit close the connection and process buffer. Also, remove
 	duplicate keybinding for 'q'.
 
-2013-06-10  Roy Hashimoto <roy.hashimoto@gmail.com>  (tiny change)
+2013-06-10  Roy Hashimoto  <roy.hashimoto@gmail.com>  (tiny change)
 
 	* mm-view.el (mm-pkcs7-signed-magic): Allow newline in the regexp and
 	make it easier to read.
